<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.flickit</groupId>
        <artifactId>flickit-assessment</artifactId>
        <version>${revision}</version>
    </parent>

    <artifactId>flickit-advice-engine</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <version.ai.timefold.solver>1.6.0</version.ai.timefold.solver>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ai.timefold.solver</groupId>
                <artifactId>timefold-solver-bom</artifactId>
                <version>${version.ai.timefold.solver}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.flickit</groupId>
            <artifactId>flickit-assessment-data</artifactId>
        </dependency>
        <dependency>
            <groupId>org.flickit</groupId>
            <artifactId>flickit-assessment-common</artifactId>
        </dependency>
        <dependency>
            <groupId>ai.timefold.solver</groupId>
            <artifactId>timefold-solver-spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>ai.timefold.solver</groupId>
            <artifactId>timefold-solver-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
